Centre the introduction section Blur and center the image

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="row first-section">
+    <div class="row first-section"></div>
+    <div class="bg-text">
       <h4 class="my-name text-center">ANNETTE WARIMWE</h4>
+      <h5>A creative Software Developer</h5>
     </div>
   </body>
 </html>
