add a row with 2 columns for the "about me" section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <div class="bg-text">
       <h4 class="my-name text-center">ANNETTE WARIMWE</h4>
       <h5>A creative Software Developer</h5>
+    <div class="row">
+      <div class="col-5"></div>
+    </div>
+    <div>
+
     </div>
   </body>
 </html>
