Update the intro image

--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <div class="row first-section"></div>
     <div class="bg-text">
       <h4 class="my-name text-center">ANNETTE WARIMWE</h4>
-      <h5>A creative Software Developer</h5>
-    <div class="row">
-      <div class="col-5"></div>
+      <p>A <span class="creative"> creative </span>Software Developer</p>
     </div>
-    <div>
-
+    <div class="row about-me">
+      <div class="col-5 photo"><img src="" alt="" /></div>
+      <div class="col-7"></div>
     </div>
   </body>
 </html>
