edit the into section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <div class="row first-section"></div>
     <div class="bg-text">
       <h4 class="my-name text-center">ANNETTE WARIMWE</h4>
-      <p>A <span class="creative"> creative </span>Software Developer</p>
+      <p class="intro">
+        A <span class="creative"> creative </span>Software Developer
+      </p>
     </div>
     <div class="row about-me">
       <div class="col-5 photo"><img src="" alt="" /></div>
