add the "about me" photo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
       </p>
     </div>
     <div class="row about-me">
-      <div class="col-5 photo"><img src="" alt="" /></div>
+      <div class="col-5 photo">
+        <img
+          class="dp"
+          src="https://media.istockphoto.com/photos/young-african-american-businesswoman-at-home-office-working-late-picture-id1281862639?b=1&k=20&m=1281862639&s=170667a&w=0&h=ZsIkwQhDEX-z3QbXiptYtyLk-vgZo3Yq-psJry7CW1c="
+          alt=""
+        />
+      </div>
       <div class="col-7"></div>
     </div>
   </body>
