add a row of "other projects done"

--- a/index.html
+++ b/index.html
@@ -27,14 +27,29 @@
       </p>
     </div>
     <div class="row about-me">
-      <div class="col-5 photo">
+      <div class="col-12 col-md-5 photo">
         <img
           class="dp"
           src="https://media.istockphoto.com/photos/young-african-american-businesswoman-at-home-office-working-late-picture-id1281862639?b=1&k=20&m=1281862639&s=170667a&w=0&h=ZsIkwQhDEX-z3QbXiptYtyLk-vgZo3Yq-psJry7CW1c="
           alt=""
         />
       </div>
-      <div class="col-7"></div>
+      <div class="col-12 col-md-7">
+        <h3>ABOUT ME</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+          enim expedita distinctio hic voluptatibus suscipit aliquam, possimus
+          ab corrupti voluptatum sint numquam quis. Dolore neque laborum sit hic
+          provident eius. Sint perspiciatis similique architecto blanditiis,
+          quae voluptatem assumenda a magni laboriosam expedita aspernatur
+          nulla. In nulla doloremque maxime enim quidem ullam tempore ipsum
+          esse? Perferendis et, excepturi id ad illum ex labore minima
+          reprehenderit dolorem quas voluptatibus, iste molestiae quia
+          aspernatur provident officiis quis facilis veniam commodi assumenda
+          dicta quo.
+        </p>
+      </div>
     </div>
+    <div class="row">h2</div>
   </body>
 </html>
