--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         </p>
       </div>
     </div>
-    <div class="row">h2</div>
+    <div class="other-projects">
+      <h2>Other projects previosly done</h2>
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+      </div>
+    </div>
   </body>
 </html>
