add hobbies and skills section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
           aspernatur provident officiis quis facilis veniam commodi assumenda
           dicta quo.
         </p>
+        <div class="hobbies">
+          <p>Hobbies and interests</p>
+          <ul>
+            <li>Cycling</li>
+            <li>Cooking</li>
+            <li>Playing chess</li>
+          </ul>
+        </div>
+        <div class="skills">
+          <p>Skills</p>
+          <ul>
+            <li>HTML</li>
+            <li>Painting</li>
+            <li>Psychotherapy</li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="other-projects">
