--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           dicta quo.
         </p>
         <div class="hobbies">
-          <p>Hobbies and interests</p>
+          <p>Hobbies and interests:</p>
           <ul>
             <li>Cycling</li>
             <li>Cooking</li>
@@ -57,7 +57,7 @@
           </ul>
         </div>
         <div class="skills">
-          <p>Skills</p>
+          <p>Skills:</p>
           <ul>
             <li>HTML</li>
             <li>Painting</li>
@@ -67,11 +67,30 @@
       </div>
     </div>
     <div class="other-projects">
-      <h2>Other projects previosly done</h2>
+      <h3>Other projects previosly done</h3>
       <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4"></div>
-        <div class="col-4"></div>
+        <div class="col-4">
+          <h4>World's Best Destinations</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi
+            voluptate deserunt sunt! Animi eaque expedita quas consectetur.
+            Molestias, ab exercitationem.
+          </p>
+        </div>
+        <div class="col-4">
+          <h4>The Cookie Recipe</h4>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa quod
+            quo veritatis perspiciatis, at facere quisquam nemo et! Cum, dolor
+            fugit! Quae dolor numquam eius cumque fugit!
+          </p>
+        </div>
+        <div class="col-4">
+          <h4>Hello-world;)</h4>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt
+          libero accusantium sunt? Quae commodi magni numquam maiores nihil
+          deserunt veritatis cumque exercitationem non rerum!
+        </div>
       </div>
     </div>
   </body>
