add the languages used

--- a/index.html
+++ b/index.html
@@ -67,29 +67,56 @@
       </div>
     </div>
     <div class="other-projects">
-      <h3>Other projects previosly done</h3>
+      <h5 class="intro-projects">Other projects previosly done</h5>
       <div class="row">
         <div class="col-4">
-          <h4>World's Best Destinations</h4>
+          <h6>World's Best Destinations</h6>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi
             voluptate deserunt sunt! Animi eaque expedita quas consectetur.
             Molestias, ab exercitationem.
           </p>
+          <p>Languages used:</p>
+          <ol>
+            <li>HTML</li>
+            <li>CSS (Bootstrap)</li>
+          </ol>
+          <br />
+          Go to:
+          <a href="https://github.com/warimwe/styling-with-classes"></a>
         </div>
         <div class="col-4">
-          <h4>The Cookie Recipe</h4>
+          <h6>The Cookie Recipe</h6>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa quod
             quo veritatis perspiciatis, at facere quisquam nemo et! Cum, dolor
-            fugit! Quae dolor numquam eius cumque fugit!
+            fugit! Quae dolor numquam eius cumque fugit!. Lorem ipsum dolor sit
+            amet.
           </p>
+          <p>Languages used:</p>
+          <ol>
+            <li>HTML</li>
+            <li>CSS (Bootstrap)</li>
+          </ol>
+          <a
+            href="https://github.com/warimwe/styling-with-classes/blob/master/index.html"
+          ></a>
         </div>
         <div class="col-4">
-          <h4>Hello-world;)</h4>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt
-          libero accusantium sunt? Quae commodi magni numquam maiores nihil
-          deserunt veritatis cumque exercitationem non rerum!
+          <h6>Hello-world;)</h6>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt
+            libero accusantium sunt? Quae commodi magni numquam maiores nihil
+            deserunt veritatis cumque exercitationem non rerum!.
+          </p>
+          <p>Languages used:</p>
+          <ol>
+            <li>HTML</li>
+            <li>CSS (Bootstrap)</li>
+          </ol>
+          <a
+            href="https://github.com/warimwe/styling-with-classes/blob/master/index.html"
+          ></a>
         </div>
       </div>
     </div>
