--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           alt=""
         />
       </div>
-      <div class="col-12 col-md-7">
+      <div class="col-12 col-md-7 mt-3 mt-md-0">
         <h3>ABOUT ME</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
@@ -68,8 +68,8 @@
     </div>
     <div class="other-projects">
       <h5 class="intro-projects">Other projects previosly done</h5>
-      <div class="row">
-        <div class="col-4">
+      <div class="row projects d-flex justify-content-around">
+        <div class="col-3">
           <h6>World's Best Destinations</h6>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi
@@ -85,7 +85,7 @@
           Go to:
           <a href="https://github.com/warimwe/styling-with-classes"></a>
         </div>
-        <div class="col-4">
+        <div class="col-3">
           <h6>The Cookie Recipe</h6>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa quod
@@ -102,7 +102,7 @@
             href="https://github.com/warimwe/styling-with-classes/blob/master/index.html"
           ></a>
         </div>
-        <div class="col-4">
+        <div class="col-3">
           <h6>Hello-world;)</h6>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt
@@ -120,5 +120,8 @@
         </div>
       </div>
     </div>
+    <footer class="text-center">
+      <p>&copy; warimwe</p>
+    </footer>
   </body>
 </html>
