replace the place holder text in the about section

--- a/index.html
+++ b/index.html
@@ -35,18 +35,13 @@
         />
       </div>
       <div class="col-12 col-md-7 mt-3 mt-md-0">
-        <h3>ABOUT ME</h3>
+        <h4>Hello, I am <strong>Annette Warimwe</strong></h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-          enim expedita distinctio hic voluptatibus suscipit aliquam, possimus
-          ab corrupti voluptatum sint numquam quis. Dolore neque laborum sit hic
-          provident eius. Sint perspiciatis similique architecto blanditiis,
-          quae voluptatem assumenda a magni laboriosam expedita aspernatur
-          nulla. In nulla doloremque maxime enim quidem ullam tempore ipsum
-          esse? Perferendis et, excepturi id ad illum ex labore minima
-          reprehenderit dolorem quas voluptatibus, iste molestiae quia
-          aspernatur provident officiis quis facilis veniam commodi assumenda
-          dicta quo.
+          I am an enthusiastic upcoming programmer and a certified Psychologist.
+          I am a creator by nature and eager to hone my development skills. I am
+          currently learning software development at Moringa School where I am
+          taking languages such as Javascript, Java, Python and many more. I am
+          learning programming so that in future I can work on my own start-up.
         </p>
         <div class="hobbies">
           <p>Hobbies and interests:</p>
@@ -71,11 +66,7 @@
       <div class="row projects d-flex justify-content-around">
         <div class="col-3">
           <h6>World's Best Destinations</h6>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi
-            voluptate deserunt sunt! Animi eaque expedita quas consectetur.
-            Molestias, ab exercitationem.
-          </p>
+          <p></p>
           <p>Languages used:</p>
           <ol>
             <li>HTML</li>
