replace the place holder text in the cookie recipe project

--- a/index.html
+++ b/index.html
@@ -66,32 +66,38 @@
       <div class="row projects d-flex justify-content-around">
         <div class="col-3">
           <h6>World's Best Destinations</h6>
-          <p></p>
-          <p>Languages used:</p>
-          <ol>
-            <li>HTML</li>
-            <li>CSS (Bootstrap)</li>
-          </ol>
-          <br />
-          Go to:
-          <a href="https://github.com/warimwe/styling-with-classes"></a>
-        </div>
-        <div class="col-3">
-          <h6>The Cookie Recipe</h6>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa quod
-            quo veritatis perspiciatis, at facere quisquam nemo et! Cum, dolor
-            fugit! Quae dolor numquam eius cumque fugit!. Lorem ipsum dolor sit
-            amet.
+            This project details tropical and popular destinations around the
+            world. The tropical destinations are distinguished from the popular
+            destinations using different colors for the headers and the
+            descriptions.
           </p>
           <p>Languages used:</p>
           <ol>
             <li>HTML</li>
-            <li>CSS (Bootstrap)</li>
+            <li>CSS</li>
           </ol>
-          <a
-            href="https://github.com/warimwe/styling-with-classes/blob/master/index.html"
-          ></a>
+          <br />
+          Go to:
+          <a href="https://github.com/warimwe/styling-with-classes"
+            >world's best destinations</a
+          >
+        </div>
+        <div class="col-3">
+          <h6>The Cookie Recipe</h6>
+          <p>
+            This project outlines the basic steps to be followed when making a
+            chocolate-flavored cookie. The instructions are pretty easy to
+            follow and chocolate-lovers will enjoy it.
+          </p>
+          <p>Languages used:</p>
+          <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ol>
+          <a href="https://github.com/warimwe/cookie-recipe.git"
+            >the cookie recipe</a
+          >
         </div>
         <div class="col-3">
           <h6>Hello-world;)</h6>
@@ -103,7 +109,7 @@
           <p>Languages used:</p>
           <ol>
             <li>HTML</li>
-            <li>CSS (Bootstrap)</li>
+            <li>CSS</li>
           </ol>
           <a
             href="https://github.com/warimwe/styling-with-classes/blob/master/index.html"
