italicize a word on the intro

--- a/index.html
+++ b/index.html
@@ -95,21 +95,27 @@
             <li>HTML</li>
             <li>CSS</li>
           </ol>
+          Go to:
           <a href="https://github.com/warimwe/cookie-recipe.git"
             >the cookie recipe</a
           >
         </div>
         <div class="col-3">
-          <h6>Hello-world;)</h6>
-          <p></p>
+          <h6>My-First-Website</h6>
+          <p>
+            This project was my first practise project at Moringa. The project
+            helped me practise HTML and outlined other languages to leran during
+            the course of the program.
+          </p>
           <p>Languages used:</p>
           <ol>
             <li>HTML</li>
-            <li>CSS</li>
+            <li>CSS (Bootstrap)</li>
           </ol>
-          <a
-            href="https://github.com/warimwe/styling-with-classes/blob/master/index.html"
-          ></a>
+          Go to:
+          <a href="https://github.com/warimwe/my-first-webpage.git"
+            >my first website</a
+          >
         </div>
       </div>
     </div>
