--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="bg-text">
       <h4 class="my-name text-center">ANNETTE WARIMWE</h4>
       <p class="intro">
-        A <span class="creative"> creative </span>Software Developer
+        A <span class="creative"><em>creative</em> </span>Software Developer
       </p>
     </div>
     <div class="row about-me">
@@ -79,7 +79,7 @@
           </ol>
           <br />
           Go to:
-          <a href="https://github.com/warimwe/styling-with-classes"
+          <a href="https://github.com/warimwe/world-s-best-destination"
             >world's best destinations</a
           >
         </div>
