Change the appearence of projects section in small devices

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="other-projects">
       <h5 class="intro-projects">Other projects previosly done</h5>
       <div class="row projects d-flex justify-content-around">
-        <div class="col-3">
+        <div class="col-12 col-md-3">
           <h6>World's Best Destinations</h6>
           <p>
             This project details tropical and popular destinations around the
@@ -113,7 +113,7 @@
             >world's best destinations</a
           >
         </div>
-        <div class="col-3">
+        <div class="col-12 col-md-3">
           <h6>The Cookie Recipe</h6>
           <p>
             This project outlines the basic steps to be followed when making a
@@ -130,7 +130,7 @@
             >the cookie recipe</a
           >
         </div>
-        <div class="col-3">
+        <div class="col-12 col-md-3">
           <h6>My-First-Website</h6>
           <p>
             This project was my first practise project at Moringa. The project
